# haskell-reading

effective-haskell/hcat/: README.md  hcat.cabal
effective-haskell/hcat/app/: Main.hs
effective-haskell/hcat/nix/: packages.nix  release.nix
effective-haskell/hcat/src/: HCat.hs
